<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/patient_test_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint" />

    <EditText
        android:id="@+id/patient_test_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/age_of_patient" />


        <NumberPicker
            android:id="@+id/patient_test_age"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="right|center_vertical"

            android:layout_marginRight="10dp" />


    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/gender_of_patient" />


        <RadioGroup

            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/patient_test_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/male_label" />

            <RadioButton
                android:id="@+id/patient_test_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_label" />


        </RadioGroup>


    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/use_of_drug" />


        <RadioGroup
            android:id="@+id/drug_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/patient_test_drug_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no_label" />

            <RadioButton
                android:id="@+id/patient_test_drug_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_label" />




        </RadioGroup>


    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/migraine_history" />

        <RadioGroup
            android:id="@+id/migraine_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/patient_test_migraine_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/no_label" />

            <RadioButton
                android:id="@+id/patient_test_migraine_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes_label" />



        </RadioGroup>


    </FrameLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/patient_test_done_button"
        android:text="@string/done_label"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        />


</LinearLayout>