<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_patient_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.insacc.toddssyndrome.PatientList.PatientListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/patient_recycler_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_new_test_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/ic_add_white_24dp"
        android:layout_margin="10dp"
        app:fabSize="mini"/>


</RelativeLayout>
